--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript-eslint-jest",
+  "name": "pokedex",
   "author": "@erikdstock",
   "license": "MIT",
   "version": "1.0.0",
@@ -9,9 +9,7 @@
     "start": "next start",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write .",
-    "lint": "eslint . --ext ts --ext tsx --ext js",
-    "test": "jest",
-    "test-all": "yarn lint && yarn type-check && yarn test"
+    "lint": "eslint . --ext ts --ext tsx --ext js"
   },
   "husky": {
     "hooks": {
@@ -26,26 +24,37 @@
     ]
   },
   "dependencies": {
+    "@strikelabs/luna": "^3.6.1",
+    "@strikelabs/pax": "^1.15.1",
+    "@strikelabs/vega": "^6.10.1",
+    "framer-motion": "^4.1.9",
+    "lodash-es": "^4.17.21",
     "next": "latest",
+    "next-optimized-images": "^2.6.2",
+    "polished": "^4.1.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-query": "^3.13.11",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.5",
-    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "@types/react-query": "^1.1.2",
+    "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
-    "babel-jest": "^26.6.3",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-react": "^7.19.0",
+    "file-loader": "^6.2.0",
     "husky": "^4.2.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.0.10",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^6.4.0",
     "prettier": "^2.0.2",
     "typescript": "^4.1.3"
   }
